# kittytype

./: .gitignore  Cargo.toml  Makefile  README.md  rustfmt.toml
assets/languages/: README.md
assets/wordsets/: README.md
src/: app.rs  kb.c  kb.h  main.c  main.rs  ui.c  ui.h
src/settings/: config.rs  error.rs  macros.rs  mod.rs  types.rs
src/ui/: app.rs  error.rs  mod.rs  settings_zone.rs  title.rs  type_zone.rs  utils.rs
